# Inclusive-TU-Delft-Map

./: .gitignore  404.html  Data_pipeline.md  Data_structure.md  LICENSE  README.md  Server.md  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
MJ_Temp/: app.js  controls.js  main.js
blender_docs/: index.html
data_pipeline/: index.html
data_structure/: index.html
database/: README.md
docs/: Data_pipeline.md  JavaScript_app.md  Python_scripts.md  Server.md  blender_docs.md  data_pipeline.md  data_structure.md  index.md  javascript_app.md  license.md  python_scripts.md  server.md
feedback/: package-lock.json  package.json  server.js
javascript_app/: index.html
license/: index.html
postgresql/: .gitignore  README.md  docker-compose.dev.yml
python/: pyproject.toml
python/src/data_pipeline/: __init__.py  cli.py
python/src/data_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python/src/data_pipeline/cj_helpers/: __init__.py  cj_attributes.py  cj_geometry.py  cj_objects.py
python/src/data_pipeline/cj_loading/: __init__.py  cj_loader.py  cj_to_gltf.py
python/src/data_pipeline/cj_writing/: __init__.py  bag_to_cj.py  gj_to_cj.py  gltf_to_cj.py
python/src/data_pipeline/utils/: __init__.py  codelists.py  csv_utils.py  geometry_utils.py  icon_positions.py  plane.py
python_scripts/: index.html
search/: search_index.json
server/: README.md  feedback-service.service  index.html  nginx_site
src/: README.md  _temp_bag_ids.py  bag_to_cj.py  cj_attributes.py  cj_geometry.py  cj_loader.py  cj_objects.py  cj_to_gltf.py  cli.py  codelists.py  constants.py  csv_utils.py  geometry_utils.py  gj_to_cj.py  gltf_to_cj.py  icon_positions.py  plane.py  pyproject.toml
threejs/: 404.html  README.md  about.html  feedback.html  header.html  index.html  package-lock.json  package.json  tsconfig.json  tutorial.html  typedoc.json  vite.config.js
(+81 files in other folders)
